# vpsetup

./: README.md  pyproject.toml
tests/: conftest.py  test_main.py  test_main_helpers.py  test_structure.py  test_validate.py
vpsetup/: __main__.py  helpers.py  structures.py  tui.py  validate.py
